# workshop-19

ros1_simple_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
ros1_simple_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
ros1_simple_ws/devel/.private/ros1_listener/: .catkin  .rosinstall  setup.sh
ros1_simple_ws/devel/.private/ros1_talker/: .catkin  .rosinstall  setup.sh
ros1_simple_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  ros1_listener.pc  ros1_talker.pc
ros1_simple_ws/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
ros1_simple_ws/devel/share/ros1_listener/cmake/: ros1_listenerConfig-version.cmake  ros1_listenerConfig.cmake
ros1_simple_ws/devel/share/ros1_talker/cmake/: ros1_talkerConfig-version.cmake  ros1_talkerConfig.cmake
ros1_simple_ws/src/ros1_listener/: CMakeLists.txt  package.xml  setup.py
ros1_simple_ws/src/ros1_listener/scripts/: listener  listener.py
ros1_simple_ws/src/ros1_talker/: CMakeLists.txt  package.xml  setup.py
ros1_simple_ws/src/ros1_talker/scripts/: talker  talker.py
ros2_simple_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_simple_ws/install/ros2_listener/lib/ros2_listener/: listener
ros2_simple_ws/install/ros2_listener/share/ros2_listener/: package.bash  package.ps1  package.sh  package.xml  package.zsh
ros2_simple_ws/log/: latest_build
ros2_simple_ws/src/: HELPER.txt  readme.txt
ros2_simple_ws/src/ros2_listener/: LICENSE  package.xml  setup.cfg  setup.py
ros2_simple_ws/src/ros2_listener/ros2_listener/scripts/: listener.py
ros2_simple_ws/src/ros2_talker/: package.xml  setup.py
ros2_simple_ws/src/ros2_talker/ros2_talker/scripts/: talker.py
(+12 files in other folders)
