<?xml version="1.0"?>
<package format="2">
  <name>ros1_talker</name>
  <version>1.0.0</version>
  <description>An example of ROS1 publisher package</description>

  <maintainer email="hsd-rr@ipa.fhg.de">hsd-rr</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
