<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_listener</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ragesh.ramachandran@ipa.fraunhofer.de">hsd-rr</maintainer>
  <license>TODO: License declaration</license>


  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
