<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros2_talker</name>
  <version>1.0.0</version>
  <description>An example of ROS2 publisher package</description>

  <maintainer email="hsd-rr@ipa.fhg.de">hsd-rr</maintainer>

  <license>Apache 2.0</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
